--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Ecommerce Responsive full website</title>
+        <title>Online Shopping for Women,Men,Kids Fashion & Lifetyle - Kumo</title>
         <!-- CSS-link-->
         <link rel="stylesheet" href="style.css"
 
