--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
         <header>
             <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
             <ul class="navmenu">
-                <li><a href="#">home</a></li>
-                <li><a href="#">shop</a></li>
-                <li><a href="#">products</a></li>
-                <li><a href="#">page</a></li>
-                <li><a href="#">docs</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Page</a></li>
             </ul>
             
             <div class="nav-icon">
@@ -40,7 +39,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
             <div class="main-text">
                 <h5>Winter Collection</h5>
                 <h1>New Winter<br> Collection 2023</h1>
-                <p>There's Nothing Like Trend</p>
+                <p>Heavy Discount! 50% OFF <br> Only for Today..</p>
                 <a href="#" class="main-btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
 
             </div>
