--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Page</a></li>
+                <li><a href="#">About Us</a></li>
             </ul>
             
             <div class="nav-icon">
