--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="./images/favicon01.png" type="image/x-icon">
         <title>Online Shopping for Women,Men,Kids Fashion & Lifetyle - Kumo</title>
         <!-- CSS-link-->
         <link rel="stylesheet" href="style.css"
@@ -40,7 +41,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
             <div class="main-text">
                 <h5>Winter Collection</h5>
                 <h1>New Winter<br> Collection 2023</h1>
-                <p>Heavy Discount! 50% OFF <br> Only for Today..</p>
+                <p>Use CODE "NEW35" And Get 35% OFF<br> Only for Today</p>
                 <a href="#" class="main-btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
 
             </div>
