--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                         <i class='bx bx-heart'></i>
                     </div>
                     <div class="ratting">
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bxs-star-half'></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star-half' ></i>
                     </div>
                     <div class="price">
                         <h4>Wollen Hoddie</h4>
@@ -86,11 +86,11 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                         <i class='bx bx-heart'></i>
                     </div>
                     <div class="ratting">
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bxs-star-half'></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star-half' ></i>
                     </div>
                     <div class="price">
                         <h4>Formal Jacket</h4>
@@ -104,11 +104,11 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                         <i class='bx bx-heart'></i>
                     </div>
                     <div class="ratting">
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bxs-star-half'></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star-half' ></i>
                     </div>
                     <div class="price">
                         <h4>Shorts</h4>
@@ -125,11 +125,11 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                         <i class='bx bx-heart'></i>
                     </div>
                     <div class="ratting">
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bxs-star-half'></i>
+                         <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star-half' ></i>
                     </div>
                     <div class="price">
                         <h4>Half Fancy Lady Dress</h4>
@@ -143,11 +143,11 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                         <i class='bx bx-heart'></i>
                     </div>
                     <div class="ratting">
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bxs-star-half'></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star-half' ></i>
                     </div>
                     <div class="price">
                         <h4>Flix Flox Jeans</h4>
@@ -164,11 +164,11 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                         <i class='bx bx-heart'></i>
                     </div>
                     <div class="ratting">
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bxs-star-half'></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star-half' ></i>
                     </div>
                     <div class="price">
                         <h4>Fancy Pant's </h4>
@@ -185,11 +185,11 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                         <i class='bx bx-heart'></i>
                     </div>
                     <div class="ratting">
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bxs-star-half'></i>
+                         <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star-half' ></i>
                     </div>
                     <div class="price">
                         <h4>Stylish Top</h4>
@@ -206,11 +206,11 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
                         <i class='bx bx-heart'></i>
                     </div>
                     <div class="ratting">
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bx-star' ></i>
-                        <i class='bx bxs-star-half'></i>
+                         <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star' ></i>
+                        <i class='bx bxs-star-half' ></i>
                     </div>
                     <div class="price">
                         <h4>Jeans Jacket</h4>
